# service-starter-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  local.db  package-lock.json  tailwind.config.js
client/: Cargo.toml  astro.config.mjs  package-lock.json  package.json  tailwind.config.js
client/src/: lib.rs
client/src/pages/: 404.astro  index.astro
client/src/pages/auth/: authPage.astro
controllers/: Cargo.toml
controllers/src/: lib.rs  templates_controller.rs  users_controller.rs  webhooks_controller.rs
controllers/templates/: base.html
controllers/templates/assets/: output.css
controllers/templates/pages/: 404.html  home.html  login.html  signup.html
models/: Cargo.toml
models/src/: permissions.rs  users.rs
persistence/: Cargo.toml
persistence/.sqlx/: query-321f8aba2f34add2dab4ddfca6475bee48708894edfcb5a392057d64bce362a9.json  query-3b050beaa786ab4924ac38bfcc2825aaeefec0fc47fd6d9a354d5a6fa56da3a6.json
persistence/migrations/: 20240308055135_init_users.sql
persistence/src/: auth.rs  lib.rs  sessions.rs  users.rs
persistence/src/in_memory_db/: in_memory_db.rs  mod.rs  users.rs
persistence/src/libsql/: auth.rs  mod.rs  users.rs
persistence/src/postgres_db/: auth.rs  mod.rs  postgres_db.rs  users.rs
services/: Cargo.toml
services/src/: lib.rs  user_service.rs
src/: lib.rs  main.rs
tests/: lib.rs
tests/common/: mod.rs
tests/endpoind_tests/: user_test.rs
utils/: Cargo.toml
utils/src/: auth_layer.rs  error.rs  lib.rs
