[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
models = { path = "../models" }
tracing = { workspace = true }
serde = { workspace = true }
