[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
models = { path = "../models" }
persistence = { path = "../persistence" }
tracing = { workspace = true }
tower-http = { workspace = true }
tower-sessions-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
services = { path = "../services" }
sqlx = { workspace = true }
utils = { path = "../utils" }
