[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
axum-login = { workspace = true }
thiserror = { workspace = true }
models = { path = "../models" }
password-auth = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
utils = { path = "../utils" }
uuid = { workspace = true }
