[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
models = { path = "../models" }
persistence = { path = "../persistence" }
sqlx = { workspace = true }
tracing = { workspace = true }
utils = { path = "../utils" }
